2008-11-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/lock.c: Remove flock/flock64 distinction.

Sat Nov 29 23:22:24 PST 2008	Jason Downs (downsj@downsj.com)
	* configure.ac: Add test for lockf.

	* src/lock.c: New file, adds _gdbm_unlock_file() and
		_gdbm_lock_file() routines.  These attempt to use flock(),
		lockf(), and fcntl() locking.
	* src/proto.h: Add new prototypes.
	* src/systems.h: Remove file locking macros.
	* src/gdbmopen.c: Rewrite locking code, use _gdbm_lock_file().
	* src/gdbmclose.c, src/gdbmreorg.c: Use _gdbm_unlock_file().

Sat Nov 29 21:19:32 PST 2008	Jason Downs (downsj@downsj.com)
	* configure.ac: Add test for sys/termios.h

	* src/systems.h: Add macros for Solaris-style 64bit fcntl locks.
	* src/testgdbm.c: Add support for opening files without locking.
		Add support for opening files without mmap.
		Add sys/termios.h include and add check for TIOCWINSZ.

	* export/export.c: Add support for opening files without locking.

Mon Oct 29 15:14:53 EET 2007    Sergey Poznyakoff (gray@gnu.org.ua)

	* configure.ac (AC_INIT): Add bug-reporting email.
	* gdbm.texinfo: Use values.texi for version and edition number and
	date.
	Document testgdbm and gdbmexport.
	Remove obsolete chapter describing conv2gdbm.

	* export/export.c: Fix check for argc.
	Take name of the output file from the second argument.
	Accept -h and -v command line options.

	* src/Makefile.am (noinst_PROGRAMS): move to bin_PROGRAMS.
	* src/flatfile.c (gdbm_export): Add missing break.
	* src/gdbmreorg.c (gdbm_reorganize): Call _gdbm_mapped_init if
	required.
	* src/testgdbm.c: Improve usage and version output to comply to
	standards.texi.
	Allow to operate on non-nul-terminated ascii data:
	(key_z, data_z): New variables.
	(key_z_handler, data_z_handler, status_handler): New handlers -
	commands 'z', 'Z' and 'S'
	All functions using key_data and data_data updated accordingly
	(read_from_file): 'r' command takes an optional second arg.
	(print_cache_handler): Use pager.