@@ -99,6 +99,9 @@ extern void gdbm_sync __P((GDBM_FILE));
 extern int gdbm_exists __P((GDBM_FILE, datum));
 extern int gdbm_setopt __P((GDBM_FILE, int, int *, int));
 extern int gdbm_fdesc __P((GDBM_FILE));
+extern int gdbm_locked __P((GDBM_FILE));
+extern int gdbm_export __P((GDBM_FILE, const char *, int, int));
+extern int gdbm_import __P((GDBM_FILE, const char *, int));
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
